--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.5'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '3.0.5'
+    id 'io.spring.dependency-management' version '1.1.0'
     id 'java'
 }
 
 group = 'com.pasha'
 version = '22.04.30.01'
 description = 'termo-tomsk-server'
-sourceCompatibility = '14'
+sourceCompatibility = '17'
 wrapper {
     gradleVersion = gradleWrapperVersion
 }
@@ -17,9 +17,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.5'
-    compileOnly "org.projectlombok:lombok:1.18.18"
-    annotationProcessor 'org.projectlombok:lombok:1.18.18'
-    implementation 'org.jetbrains:annotations:23.0.0'
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.1'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.5'
+    compileOnly "org.projectlombok:lombok:1.18.26"
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
+    implementation 'org.jetbrains:annotations:24.0.1'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.2'
+//    implementation 'net.sourceforge.tess4j:tess4j:5.7.0'
 }
