--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,13 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:3.0.5'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.5'
     compileOnly "org.projectlombok:lombok:1.18.26"
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
     implementation 'org.jetbrains:annotations:24.0.1'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.2'
+}
+
+test {
+    useJUnitPlatform()
 }
